<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textCred"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:hint="@string/enter_email"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/TextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:textColor="#0000ff"
        android:textStyle="italic"
        android:text="@string/TextViewLogin"
        android:textSize="20sp" />

</RelativeLayout>